Fixed emote positioning showing scrollbar on CLR (#832) (#833)
- Also, emotes can now take any spot on the CLR (Previously they could not go right to or slightly over the edges of the screen)
- Also includes a small change to change the image upscaling algorithm to "pixelated" instead of "auto", i.e. when emotes are zoomed in, the borders between pixels will not be smoothed out

--- a/static/css/clr.overlay.scss
+++ b/static/css/clr.overlay.scss
@@ -53,8 +53,14 @@ div.exploding {
   position: absolute;
 }
 
-img.absemote {
-  position: absolute;
+div.absemote_container {
+  position: fixed;
+  transform: translate(-50%, -50%);
+}
+
+img.absemote,
+#emote_combo img {
+  image-rendering: pixelated;
 }
 
 div.notifications {
